# gendiff-data-process

./: .gitignore  batch_smooth_decimate.py  check_obj_threshold.py  copy_by_relative_path.py  count_obj_heights.py  cut_building_from_yaml.py  cut_building_multiprocess.py  cut_building_only.py  edit_data_yaml.py  floating_poly_detect.py  gen_building_and_ground_data_yaml.py  gen_building_data_yaml.py  generate_oblique_path.py  generate_t2.py  get_origin.py  list_obj_bboxes.py  merge_building.py  pyproject.toml  stat_chunk_num.py  utils.py  voxel_gpu.py  watertight.py
building_process/: batch_laplacian_decimate.py  batch_smooth_decimate.py  compute_ground_voxel.py  voxel_gpu.py
dora_preprocess/: building_sharp_sample_multiprocess.py  detect_path.py  process_building_data.py  requirements.txt  sdf_marching_cubes.py
gen_yaml/: edit_data_yaml.py  gen_building_and_ground_data_yaml.py  gen_building_data_yaml.py  gen_language_yaml.py
obj_to_language/: batch_obj_yaml_pipeline.py  obj_to_yaml.py  obj_to_yaml_new.py  report_large_footprints.py  rotate_yaml_bottom_contours.py  yaml_to_obj.py  yaml_to_obj_new.py
pipeline/: segment_and_normalize_point_cloud.py  select_t1_and_t2.py
process_change/: cut_inser_building_change_model.py  process_change_model.py  run_multi_blender.py  sampling_worker.py  utils.py
process_combination/: add_condition_to_yaml.py  batch_report_max_coords.py  batch_rotate_pointclouds.py  convert_pt_to_ply.py  process_combination.py  process_combination_use_mesh.py
